fixed overflow issues

--- a/src/style/_modal.scss
+++ b/src/style/_modal.scss
@@ -11,7 +11,7 @@
   z-index: 2100;
   display: none;
   // overflow: hidden;
-  overflow: hidden;
+  overflow: auto;
   -webkit-overflow-scrolling: touch;
   outline: 0;
   transition: all 0.3s ease;
